--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.1.6",
@@ -23,6 +24,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.10.3",
     "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
